--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bitcoind-rpc": "^0.6.0",
     "bitcore-lib": "5.0.0-beta.1",
     "bitcore-p2p": "5.0.0-beta.1",
+    "insight-api": "git+https://github.com/bitpay/insight-api.git#v5.0.0-beta.44",
     "bn.js": "^4.11.8",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
